# sequential-storage

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  fuzz.sh
.github/workflows/: ci.yaml
example/: Cargo.toml  build.rs  memory.x
example/.cargo/: config.toml
example/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: map.rs  map_with_shutoff.rs  queue.rs  queue_with_shutoff.rs  random-flash.rs
host-tool/: Cargo.toml  rmk.raw
host-tool/src/: main.rs
src/: alloc_impl.rs  arrayvec_impl.rs  cache.rs  heapless_09_impl.rs  heapless_impl.rs  item.rs  lib.rs  map.rs  mock_flash.rs  queue.rs  runtime.rs
src/cache/: array_impl.rs  heap_impl.rs  key_pointers.rs  list.rs  mod.rs  page_pointers.rs  page_states.rs  tests.rs
src/queue/: buffer.rs  buffered.rs  mod.rs
