cargo-features = ["panic-immediate-abort"]

[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf52840"] }
embassy-embedded-hal = { version = "0.5.0", default-features = false }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"

sequential-storage = { path = "../", features = ["defmt"] }

[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "immediate-abort"
codegen-units = 1
incremental = false
