[package]
name = "sequential-storage-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sequential-storage = { path = "..", features = ["_test"] }
arbitrary = { version = "1.2.2", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
futures = { version = "0.3.30", features = ["executor"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "queue"
path = "fuzz_targets/queue.rs"
test = false
doc = false

[[bin]]
name = "map"
path = "fuzz_targets/map.rs"
test = false
doc = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing_repro)'] }

[[bin]]
name = "random-flash"
path = "fuzz_targets/random-flash.rs"
test = false
doc = false
